# openapi/v1.json
@@ -817,55 +817,6 @@
         ],
         "additionalProperties": false
       },
-      "OfflineSyncPayload": {
-        "type": "object",
-        "properties": {
-          "activities": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Activity"
-            }
-          },
-          "photos": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Photo"
-            }
-          },
-          "deletedActivityIds": {
-            "type": "array",
-            "items": {
-              "type": "string",
-              "pattern": "^\\d+$"
-            }
-          },
-          "deletedPhotoIds": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "cursor": {
-            "type": "string",
-            "format": "date-time",
-            "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d:[0-5]\\d(?:\\.\\d+)?(?:Z))$"
-          },
-          "serverTime": {
-            "type": "string",
-            "format": "date-time",
-            "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d:[0-5]\\d(?:\\.\\d+)?(?:Z))$"
-          }
-        },
-        "required": [
-          "activities",
-          "photos",
-          "deletedActivityIds",
-          "deletedPhotoIds",
-          "cursor",
-          "serverTime"
-        ],
-        "additionalProperties": false
-      },
       "SyncBootstrapPageResponse": {
         "type": "object",
         "properties": {
